syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.presto.grpc.udf";
option java_outer_classname = "GrpcUdfService";

package udf;

service GrpcUdfInvoke {
  rpc InvokeUdf (GrpcUdfRequest) returns (GrpcUdfResult);
}

message GrpcFunctionHandle {
  string functionName = 1;
  repeated string argumentTypes = 2;
  string returnType = 3;
  string version = 4;
}

enum GrpcUdfPageFormat {
  Presto = 0;

  // other data format can be adder here, for example:
  // Arrow arrow = 1;
}

message GrpcSerializedPage {
  bytes sliceBytes = 1;
  sint64 positionCount = 2;
  sint64 uncompressedSizeInBytes = 3;
  bytes pageCodecMarkers = 4;
  sint64 checksum = 5;
}

message GrpcUdfPage {
  GrpcUdfPageFormat grpcUdfPageFormat = 1;
  GrpcSerializedPage grpcSerializedPage = 2;

  // other data format can be adder here, for example:
  // GrpcArrowSerializedPage arrowSerializedPage = 2;
}

message GrpcUdfRequest {
  string source = 1;
  GrpcFunctionHandle grpcFunctionHandle = 2;
  GrpcUdfPage inputs = 3;
}

message GrpcUdfStats {
  sint64 totalCpuTimeMs = 1;
}

message GrpcUdfResult {
  GrpcUdfPage result = 1;
  GrpcUdfStats udfStats = 2;
}
